@@ -1,0 +1,96 @@
+<html>
+
+<head>
+	<title>haXe</title>
+	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+	<script type="text/javascript" src="unit.js"></script>
+</head>
+
+<body bgcolor="#dddddd" onLoad="setTimeout('unit.Test.main()',100)">
+
+<table>
+<tr>
+<td>
+
+<p>JS :</p>
+
+<div id="haxe:trace" style="{ background-color : white; width : 390px; padding : 5px; }">
+</div>
+
+</td>
+<td>
+
+<p>Neko :</p>
+
+<iframe src="http://dev.unit-tests/unit.n" style="{ border : none; background-color : white; width : 400px; }">
+</iframe>
+
+</td>
+</tr>
+
+<tr>
+<td>
+
+<p>Flash 8 :</p>
+
+<object	classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"
+        width="400"
+	height="300"
+	id="haxe"
+	align="middle">
+<param name="movie" value="unit8.swf"/>
+<param name="allowScriptAccess" value="always" />
+<param name="quality" value="high" />
+<param name="scale" value="noscale" />
+<param name="salign" value="lt" />
+<param name="bgcolor" value="#ffffff"/>
+<embed src="unit8.swf"
+       bgcolor="#ffffff"
+       width="400"
+       height="300"
+       name="haxe"
+       quality="high"
+       align="middle"
+       allowScriptAccess="always"
+       type="application/x-shockwave-flash"
+       pluginspage="http://www.macromedia.com/go/getflashplayer"
+/>
+</object>
+
+</td>
+<td>
+
+<p>
+Flash 9 :
+</p>
+
+<object	classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"
+        width="400"
+	height="300"
+	id="haxe"
+	align="middle">
+<param name="movie" value="unit9.swf"/>
+<param name="allowScriptAccess" value="always" />
+<param name="quality" value="high" />
+<param name="scale" value="noscale" />
+<param name="salign" value="lt" />
+<param name="bgcolor" value="#ffffff"/>
+<embed src="unit9.swf"
+       bgcolor="#ffffff"
+       width="400"
+       height="300"
+       name="haxe"
+       quality="high"
+       align="middle"
+       allowScriptAccess="always"
+       type="application/x-shockwave-flash"
+       pluginspage="http://www.macromedia.com/go/getflashplayer"
+/>
+</object>
+
+</td>
+</tr>
+</table>
+
+</body>
+</html>
